# Aliquot_Sequencing

./: Cargo.toml  README.md
src/: main.rs
src/sieve/: algorithm.rs
src/sieve/algorithm/: tile.rs
