[package]
name = "rust-solution-5"
version = "0.1.0"
authors = ["Kai Rese"]
edition = "2018"

[dependencies]
rayon = "^1"
structopt = "^0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

#[build]
#
#[target.x86_64-pc-windows-msvc]
#rustflags = [ "-C", "target-cpu=native" ]
#
#[target.x86_64-unknown-linux-gnu]
#rustflags = [ "-C", "target-cpu=native" ]
#
#[target.aarch64-unknown-linux-gnu]
#rustflags = [ "-C", "target-cpu=native" ]
